Fix close button not visible, use multibutton instead of drop down and change label

--- a/src/blocks/modal/style.scss
+++ b/src/blocks/modal/style.scss
@@ -58,7 +58,7 @@ body {
 		justify-content: flex-start;
 		width: 700px;
 		height: 450px;
-		margin-top: 10px;
+		margin-top: 100px;
 		max-width: 100%;
 		box-sizing: border-box;
 		background: #fff;
